syntax = "proto3";

//服务名
package go.micro.service.user;

//go文件包路径
option go_package = "proto/user";

service UserService {
  rpc list(PageDto) returns (PageDto) {}
  rpc login(User) returns (User) {}
  rpc logout(User) returns (User) {}
  rpc save(User) returns (User) {}
}

message PageDto {
  //分页查询每页数量，默认20
  int64 pageSize = 1;
  //分页查询页码，从第一页开始
  int64 pageNum = 2;
  // 排序字段
  string sortBy = 3;
  // 顺序 -1降序 1升序
  int32 order=4;
  //具体数据，这里repeated表示可以出现多条，类似于go中的slice
  repeated User rows = 6;
}

message User {

  string id = 1;

  string loginName = 2;

  string name = 3;

  string password = 4;
}
